<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.chineduoty.aroundme.LoginActivity"
    android:padding="20dp"
    tools:ignore="MissingPrefix">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:layout_gravity="right"
        android:textColor="@color/black"
        android:textSize="16sp"
        fontPath="fonts/Titillium_Regular.otf"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/vote_city"
        android:textSize="30sp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/colorPrimary"
        fontPath="fonts/Titillium_Bold.otf"/>

    <ImageView
        android:layout_width="224dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:src="@android:drawable/alert_dark_frame"
        android:layout_weight="2"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="1">
        <Button
            android:id="@+id/pick_city_btn"
            android:text="@string/pick_city"
            android:textAllCaps="true"
            style="@style/AMButton"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_my_location_black_24dp"
            android:drawablePadding="10dp"
            android:drawableTint="@color/colorPrimary"
            android:text="@string/use_current_location"
            android:layout_gravity="center"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"/>
    </LinearLayout>

</LinearLayout>
