<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.chineduoty.aroundme.routeplanner.ShareRideResultsActivity"
    tools:ignore="MissingPrefix"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorPrimary"
        android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="14dp"
            android:text="Request/Share"
            android:layout_marginLeft="14dp"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="24sp"
            fontPath="fonts/Titillium_Bold.otf"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="14dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:id="@+id/from_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/from"
                android:textColor="@color/grey_600"
                android:textSize="14sp"
                fontPath="fonts/Titillium_Regular.otf"
                app:layout_constraintBottom_toBottomOf="@+id/from_input"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/from_input"
                android:layout_marginLeft="8dp" />

            <EditText
                android:id="@+id/from_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:ems="12"
                android:inputType="text"
                android:hint="@string/departure_station"
                app:layout_constraintStart_toEndOf="@+id/from_text"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="8dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                fontPath="fonts/Titillium_Bold.otf"
                android:background="@drawable/route_edittext"/>

            <EditText
                android:id="@+id/to_input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="0dp"
                android:layout_marginTop="14dp"
                android:ems="12"
                android:inputType="text"
                android:hint="@string/destination_station"
                app:layout_constraintEnd_toEndOf="@+id/from_input"
                app:layout_constraintStart_toStartOf="@+id/from_input"
                app:layout_constraintTop_toBottomOf="@+id/from_input"
                android:layout_marginRight="0dp"
                android:padding="10dp"
                android:textSize="18sp"
                android:textColor="@color/black"
                fontPath="fonts/Titillium_Bold.otf"
                android:background="@drawable/route_edittext"/>

            <TextView
                android:id="@+id/to_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/to"
                app:layout_constraintBottom_toBottomOf="@+id/to_input"
                app:layout_constraintEnd_toEndOf="@+id/from_text"
                app:layout_constraintTop_toTopOf="@+id/to_input"
                android:layout_marginRight="8dp"
                android:textColor="@color/grey_600"
                android:textSize="14sp"
                fontPath="fonts/Titillium_Regular.otf"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="0dp"
                android:layout_marginTop="8dp"
                android:tint="@color/darkest_cyan"
                app:layout_constraintBottom_toBottomOf="@+id/to_input"
                app:layout_constraintStart_toEndOf="@+id/from_input"
                app:layout_constraintTop_toTopOf="@+id/from_input"
                app:srcCompat="@drawable/ic_swap_vertical_circle_black_24dp"
                android:layout_marginLeft="0dp" />


        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_marginTop="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/departure_time"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/outbound_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/date_time"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_person_add_black_24dp"
                android:tint="@color/fade_white"
                android:layout_marginRight="15dp"
                android:layout_gravity="bottom" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/passengers"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/passengers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="1 Adult"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:padding="10dp"
            android:layout_gravity="bottom"
            android:gravity="bottom">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/pick_city_btn1"
                android:text="@string/request"
                android:textAllCaps="false"
                style="@style/AMButton"
                android:layout_marginRight="5dp"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/pick_city_btn2"
                android:text="@string/share"
                android:textAllCaps="false"
                style="@style/AMButton"
                android:layout_marginLeft="5dp"/>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>