<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
tools:context="com.example.chineduoty.aroundme.shareride.ShareRideFragment"
tools:ignore="MissingPrefix">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="4"
    android:orientation="vertical"
    android:background="@color/colorPrimary"
    android:gravity="center_horizontal"
    android:padding="14dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/post_ride_label"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:gravity="center"
        fontPath="fonts/Titillium_Regular.otf"/>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/from_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/from"
            android:textColor="@color/fade_white"
            android:textSize="14sp"
            fontPath="fonts/Titillium_Regular.otf"
            app:layout_constraintBottom_toBottomOf="@+id/from_input"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/from_input"
            android:layout_marginLeft="8dp" />

        <EditText
            android:id="@+id/from_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:ems="12"
            android:inputType="text"
            android:hint="@string/departure_station"
            app:layout_constraintStart_toEndOf="@+id/from_text"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="8dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            fontPath="fonts/Titillium_Bold.otf"
            android:background="@drawable/route_edittext"/>

        <EditText
            android:id="@+id/to_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginTop="14dp"
            android:ems="12"
            android:inputType="text"
            android:hint="@string/destination_station"
            app:layout_constraintEnd_toEndOf="@+id/from_input"
            app:layout_constraintStart_toStartOf="@+id/from_input"
            app:layout_constraintTop_toBottomOf="@+id/from_input"
            android:layout_marginRight="0dp"
            android:padding="10dp"
            android:textSize="18sp"
            android:textColor="@color/black"
            fontPath="fonts/Titillium_Bold.otf"
            android:background="@drawable/route_edittext"/>

        <TextView
            android:id="@+id/to_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/to"
            app:layout_constraintBottom_toBottomOf="@+id/to_input"
            app:layout_constraintEnd_toEndOf="@+id/from_text"
            app:layout_constraintTop_toTopOf="@+id/to_input"
            android:layout_marginRight="8dp"
            android:textColor="@color/fade_white"
            android:textSize="14sp"
            fontPath="fonts/Titillium_Regular.otf"/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:tint="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/to_input"
            app:layout_constraintStart_toEndOf="@+id/from_input"
            app:layout_constraintTop_toTopOf="@+id/from_input"
            app:srcCompat="@drawable/ic_swap_vertical_circle_black_24dp"
            android:layout_marginLeft="0dp" />


    </android.support.constraint.ConstraintLayout>

</LinearLayout>

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="7"
    android:background="@color/white"
    android:scrollbars="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->
            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp">-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:srcCompat="@drawable/ic_arrow_forward_black_24dp"-->
                    <!--android:tint="@color/colorPrimary"/>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="@string/single"-->
                    <!--android:textSize="16sp"-->
                    <!--android:textColor="@color/colorPrimary"-->
                    <!--fontPath="fonts/Titillium_Regular.otf"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp">-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:srcCompat="@drawable/ic_swap_horiz_black_32dp"-->
                    <!--android:tint="@color/fade_white"/>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="@string/return_text"-->
                    <!--android:textSize="16sp"-->
                    <!--android:textColor="@color/fade_white"-->
                    <!--fontPath="fonts/Titillium_Regular.otf"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->
            <!--</LinearLayout>-->

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="match_parent"-->
                <!--android:layout_weight="1"-->
                <!--android:orientation="vertical"-->
                <!--android:gravity="center"-->
                <!--android:padding="5dp">-->

                <!--<ImageView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--app:srcCompat="@drawable/ic_sync_black_32dp"-->
                    <!--android:tint="@color/fade_white"/>-->

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_marginTop="10dp"-->
                    <!--android:text="@string/open_return"-->
                    <!--android:textSize="16sp"-->
                    <!--android:textColor="@color/fade_white"-->
                    <!--fontPath="fonts/Titillium_Regular.otf"-->
                    <!--android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>-->
            <!--</LinearLayout>-->

        <!--</LinearLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/outbound"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/outbound_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="14 Dec. 2017"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/returning"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/return_date_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="@string/not_selected"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <!--Choose passengers-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_event_seat_black_24dp"
                android:tint="@color/fade_white"
                android:layout_marginRight="15dp"
                android:layout_gravity="bottom" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Seats Available"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/passengers_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="3"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <!--Select Railcard-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/ic_card_membership_black_24dp"
                android:tint="@color/fade_white"
                android:layout_marginRight="15dp"
                android:layout_gravity="bottom" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Fare/person"
                android:textSize="16sp"
                android:textColor="@color/grey_600"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

            <TextView
                android:id="@+id/railcard_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="end"
                android:text="£4"
                android:textSize="16sp"
                android:textColor="@color/darkest_cyan"
                fontPath="fonts/Titillium_Regular.otf"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/fade_white"/>

        <Button
            android:id="@+id/pick_city_btn"
            android:text="Share Ride"
            android:textAllCaps="false"
            style="@style/AMButton"
            android:layout_margin="14dp"
            android:layout_gravity="bottom"/>
    </LinearLayout>
</ScrollView>
</LinearLayout>

